# proctmux

./: Cargo.toml  LICENSE  README.md  flake.nix  proctmux.yaml
src/: args.rs  boolean_condvar.rs  config.rs  constants.rs  controller.rs  daemon.rs  draw.rs  event.rs  frame.rs  gui_state.rs  input.rs  main.rs  model.rs  process.rs  repr.rs  state.rs  tmux.rs  tmux_context.rs  tmux_daemon.rs
