[package]
name = "proctmux"
version = "0.1.0"
authors = ["Eddie Hickey"]
description = "TUI for running multiple processes in parallel in easily switchable tmux panes"
repository = "https://github.com/erhickey/proctmux"
license = "MIT"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities"]

[dependencies]
libc = "0.2.147"
termion = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
