[package]
name = "proctmux"
version = "0.1.0"
authors = ["Eddie Hickey", "Nick Pisani"]
description = "TUI for running multiple processes in parallel in easily switchable tmux panes"
repository = "https://github.com/erhickey/proctmux"
license = "MIT"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.9.0"
libc = "0.2.147"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.29.4"
termion = "2.0"
