[package]
name = "proctmux"
version = "0.1.0"
authors = ["Eddie Hickey", "Nick Pisani"]
description = "TUI for running multiple processes in parallel in easily switchable tmux panes"
repository = "https://github.com/erhickey/proctmux"
license = "MIT"
readme = "README.md"
edition = "2021"
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.9.0"
libc = "0.2.147"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# sysinfo = "0.29.4"
termion = { version = "2.0", features = ["serde"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
